cmake_minimum_required(VERSION 3.21)
project(PS_JoonYeol)

set(CMAKE_CXX_STANDARD 14)

add_executable(PS_JoonYeol main.cpp)
add_executable(solve_1000 "BaekJoon/Math/1000번 A+B/solve_1000.cpp")
add_executable(solve_2557 "BaekJoon/Implementation/2557번 Hello World/solve_2557.cpp")
add_executable(solve_2558 "BaekJoon/Math/2558번 A+B-2/solve_2558.cpp")