cmake_minimum_required(VERSION 3.21)
project(PS_JoonYeol)

set(CMAKE_CXX_STANDARD 14)

add_executable(PS_JoonYeol main.cpp)
add_executable(solve_1000 "BaekJoon/Math/1000번 A+B/solve_1000.cpp")
add_executable(solve_2557 "BaekJoon/Implementation/2557번 Hello World/solve_2557.cpp")
add_executable(solve_2558 "BaekJoon/Math/2558번 A+B-2/solve_2558.cpp")
add_executable(solve_10950 "BaekJoon/Math/10950번 A+B-3/solve_10950.cpp")
add_executable(solve_11718 "BaekJoon/String/11718번 그대로 출력하기/solve_11718.cpp")
add_executable(solve_10926 "BaekJoon/String/10926번 놀람/solve_10926.cpp")
add_executable(solve_11719 "BaekJoon/String/11719번 그대로 출력하기 2/solve_11719.cpp")
add_executable(solve_18108 "BaekJoon/String/18108번 1998년생인 내가 태국에서는 2541년생/solve_18108.cpp")
add_executable(solve_1233 "BaekJoon/BruteForce/1233번 주사위/solve_1233.cpp")
add_executable(solve_10845 "BaekJoon/Queue/10845번 큐/solve_10845.cpp")
add_executable(solve_1049 "BaekJoon/Greedy/1049번 기타줄/solve_1049.cpp")