cmake_minimum_required(VERSION 3.21)
project(PS_JoonYeol)

set(CMAKE_CXX_STANDARD 14)

include_directories(SYSTEM /usr/local/include)

add_executable(PS_JoonYeol main.cpp)
add_executable(solve_1000 "BaekJoon/Math/1000번 A+B/solve_1000.cpp")
add_executable(solve_2557 "BaekJoon/Implementation/2557번 Hello World/solve_2557.cpp")
add_executable(solve_2558 "BaekJoon/Math/2558번 A+B-2/solve_2558.cpp")
add_executable(solve_10950 "BaekJoon/Math/10950번 A+B-3/solve_10950.cpp")
add_executable(solve_11718 "BaekJoon/String/11718번 그대로 출력하기/solve_11718.cpp")
add_executable(solve_10926 "BaekJoon/String/10926번 놀람/solve_10926.cpp")
add_executable(solve_11719 "BaekJoon/String/11719번 그대로 출력하기 2/solve_11719.cpp")
add_executable(solve_18108 "BaekJoon/String/18108번 1998년생인 내가 태국에서는 2541년생/solve_18108.cpp")
add_executable(solve_1233 "BaekJoon/BruteForce/1233번 주사위/solve_1233.cpp")
add_executable(solve_10845 "BaekJoon/Queue/10845번 큐/solve_10845.cpp")
add_executable(solve_1049 "BaekJoon/Greedy/1049번 기타줄/solve_1049.cpp")
add_executable(solve_5639 "BaekJoon/Tree/5639번 이진 검색 트리/solve_5639.cpp")
add_executable(solve_10250 "BaekJoon/Math/10250번 ACM호텔/solve_10250.cpp")
add_executable(solve_1929 "BaekJoon/Math/1929번 소수 구하기/solve_1929.cpp")
add_executable(solve_2475 "BaekJoon/Math/2475번 검증수/solve_2475.cpp")
add_executable(solve_2417 "BaekJoon/Math/2417번 정수 제곱근/solve_2417.cpp")
add_executable(solve_2525 "BaekJoon/Implementation/2525번 오븐 시계/solve_2525.cpp")
add_executable(solve_1924 "BaekJoon/Implementation/1924번 2007년/solve_1924.cpp")
add_executable(solve_2445 "BaekJoon/Implementation/2445번 별 찍기 - 8/solve_2445.cpp")
add_executable(solve_2446 "BaekJoon/Implementation/2446번 별 찍기 - 9/solve_2446.cpp")
add_executable(solve_1463 "BaekJoon/DynamicProgramming/1463번 1로 만들기/solve_1463.cpp")
add_executable(solve_11725 "BaekJoon/GraphTraversal/11725번 트리의 부모 찾기/solve_11725.cpp")
add_executable(solve_1325 "BaekJoon/GraphTraversal/1325번 효율적인 해킹/solve_1325.cpp")
add_executable(solve_17626 "BaekJoon/DynamicProgramming/17626번 Four Squares/solve_17626.cpp")
add_executable(solve_1806 "BaekJoon/TwoPointer/1806번 부분합/solve_1806.cpp")
add_executable(solve_12847 "BaekJoon/SlidingWindow/12847번 꿀 아르바이트/solve_12847.cpp")
add_executable(solve_14719 "BaekJoon/Implementation/14719번 빗물/solve_14719.cpp")
add_executable(solve_9184 "BaekJoon/DynamicProgramming/9184번 신나는 함수 실행/solve_9184.cpp")
add_executable(solve_1914 "BaekJoon/BruteForce/1914번 하노이탑/solve_1914.cpp")
add_executable(solve2217 "BaekJoon/Greedy/2217번 로프/solve_2217.cpp")
add_executable(solve_1966 "BaekJoon/Queue/1966번 프린터 큐/solve_1966.cpp")